Finish implementing codegen sidecar

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ repl = [
     "finnr_codegen",
     "whenever>=0.8.6",
     "pycountry>=24.6.1",
+    "templatey>=2025.7.3.0",
 ]
 
 [tool.uv]
@@ -57,6 +58,7 @@ cache_dir = '/tmp/pytest_cache'
 
 [tool.ruff]
 line-length = 79
+extend-exclude = ['**/*.templatey.py']
 
 [tool.ruff.lint]
 dummy-variable-rgx = "^_{1,2}$"
@@ -112,6 +114,7 @@ max-args = 7
 
 [tool.ruff.lint.per-file-ignores]
 "tests_py/**" = ["S101", "PLR2004", "N999"]
+"iso.py" = ["RUF001", "E501"]
 
 [tool.pyright]
 # See https://github.com/microsoft/pyright/blob/main/docs/configuration.md
@@ -122,4 +125,5 @@ pythonPlatform = "Linux"
 
 reportUnknownVariableType = "information"
 reportUnknownMemberType = "information"
+ignore = ['**/*.templatey.py']
  
