--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
 [dependency-groups]
 test = [
     "finnr_testutils",
+    "pytest>=8.4.1",
 ]
 
 lint = [
@@ -55,6 +56,7 @@ testpaths = [
 ]
 addopts = "--import-mode=importlib"
 cache_dir = '/tmp/pytest_cache'
+python_files = "*.test.py"
 
 [tool.ruff]
 line-length = 79
